# rust-discord-bot

./: Cargo.toml
src/: main.rs
src/commands/: fun.rs  help.rs  mod.rs
